Fixed spacing on contact page, fixed global font, changed background color of button on hover

--- a/clarissa.css
+++ b/clarissa.css
@@ -1,5 +1,6 @@
 body {
 	color: #414442;
+	font-family: "Outfit", "Verdana", sans-serif;
 	width: 100%;
 	height: 100%;
 	min-width: 1000px;
@@ -39,11 +40,9 @@ body {
 }
 
 #page-home {
-	color: #000;
+	color: #414442;
 	font-family: "Outfit", "Verdana", sans-serif;
 	font-size: 12pt;
-/*	background-color: #AC7D88;*/
-/*	background-color: #ffe16b;*/
 	width: 100%;
 	height: 100%;
 /*	margin: 0;*/
@@ -51,18 +50,21 @@ body {
 }
 
 #page-about-me {
-	color: #000;
+	color: #414442;
 	font-family: "Outfit", "Verdana", sans-serif;
 	font-size: 12pt;
-/*	background-color: #ffeeb3;*/
-/*	background-color: #ffedbf;*/
 	width: 100%;
 	height: 100%;
 	text-align: left;
 }
 
 #page-contact-me {
-/*	min-height: ;*/
+	color: #414442;
+	font-family: "Outfit", "Verdana", sans-serif;
+	font-size: 12pt;
+	width: 100%;
+	height: 100%;
+	text-align: left;
 }
 
 nav {
@@ -200,6 +202,11 @@ footer {
 	border: 1px solid #CCD5AE;
 }
 
+#resume a.btn:hover {
+	background-color: #c1c7a9;
+	border: 1px solid #9ea38b;
+}
+
 #stats {
 	align-items: center;
 /*	border: 1px solid black;*/
@@ -276,9 +283,24 @@ img.portrait {
 	text-align: center;
 }
 
+#what-i-do h3 {
+	margin-bottom: 1em;
+	/*text-decoration: underline;
+	text-decoration-thickness: 2px;
+	text-underline-offset: 0.2em;*/
+}
+
 .card {
 	background-color: #FEFAE0;
 	border: 1px solid tan;
+}
+
+.card-body h5 {
+	margin-bottom: 1em;
+	text-decoration: underline;
+	text-decoration-style: double;
+	text-decoration-thickness: 1px;
+	text-underline-offset: 0.4em;
 }
 
 #certs {
@@ -305,6 +327,11 @@ img.portrait {
 	width: 24px;
 }
 
+.main-col {
+	/*padding-left: 0 !important;
+	padding-right: 0 !important;*/
+}
+
 .email-me {
 	border: 3px solid tan;
 	border-radius: 20px;
@@ -313,13 +340,23 @@ img.portrait {
 	padding: 2em;
 }
 
+.email-me h4 {
+	font-family: Courgette, Outfit, sans-serif;
+	margin-bottom: 1em;
+}
+
 #contact-heading {
 /*	border: 1px solid black;*/
+	font-family: Courgette, Outfit, sans-serif;
 	text-align: center;
-/*	max-width: 75%;*/
+}
+
+#contact-blurb {
+/*	padding: 5em, 0, 5em, 0;*/
 }
 
 #how-to-contact {
+/*	margin: 3em, 0, 3em, 0;*/
 	max-width: 80%;
 }
 
@@ -328,9 +365,10 @@ img.portrait {
 }
 
 #socials {
-	border: 1px solid black;
+/*	border: 1px solid black;*/
+	font-size: 11pt;
 /*	margin: 0;*/
-	max-width: 100%;
+	width: 100%;
 }
 
 #socials div {
@@ -353,6 +391,6 @@ img.portrait {
 }
 
 #socials a:hover {
-	text-decoration: underline;
-	text-underline-offset: 2px;
+	/*text-decoration: underline;
+	text-underline-offset: 2px;*/
 }
